use internal Base64 coder instead of javax.xml.bind.DatatypeConverter